# uav_project

./: .gitignore  README.md
.github/workflows/: paper-batch-120.yml
src/orchard_bringup/: CMakeLists.txt  package.xml
src/orchard_bringup/config/: orchard_sim.rviz  scenario_basic.yaml  scenario_stress.yaml  scenario_typical.yaml  uav_params.yaml
src/orchard_bringup/launch/: sim_bringup.launch.py  sim_with_gz.launch.py
src/orchard_ego_bridge/: CMakeLists.txt  package.xml
src/orchard_ego_bridge/src/: ego_local_planner_stub_node.cpp  planning_arbitrator_node.cpp
src/orchard_evaluation/: package.xml  setup.cfg  setup.py
src/orchard_evaluation/orchard_evaluation/: batch_runner.py  metrics_aggregator.py  report_generator.py
src/orchard_evaluation/resource/: orchard_evaluation
src/orchard_msgs/: CMakeLists.txt  package.xml
src/orchard_msgs/msg/: MissionEvent.msg  Task.msg  TaskAllocation.msg  TaskAllocationArray.msg  UavState.msg  UavStateArray.msg
src/orchard_msgs/srv/: InjectEvent.srv  QueryTrajectoryCost.srv  ReallocateTasks.srv
src/orchard_sim/: package.xml  setup.cfg  setup.py
src/orchard_sim/orchard_sim/: fleet_state_publisher.py  gz_path_follower.py  spawn_plan_publisher.py  viz_publisher.py  world_generator.py
src/orchard_sim/resource/: orchard_sim
src/orchard_task_allocation/: package.xml  setup.cfg  setup.py
src/orchard_task_allocation/orchard_task_allocation/: dynamic_scheduler.py  event_injector.py  event_profile_player.py  task_allocator.py
src/orchard_task_allocation/resource/: orchard_task_allocation
src/orchard_traj_minco/: CMakeLists.txt  package.xml
src/orchard_traj_minco/src/: traj_optimizer_node.cpp
