<?xml version="1.0"?>
<package format="3">
  <name>orchard_evaluation</name>
  <version>0.1.0</version>
  <description>Metrics aggregation and experiment batch utilities.</description>
  <maintainer email="liaw@example.com">liaw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>nav_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
