<?xml version="1.0"?>
<package format="3">
  <name>orchard_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages and services for orchard multi-UAV inspection simulation.</description>
  <maintainer email="liaw@example.com">liaw</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
